Fixed spacing issue on some mobile devices where options summary overcrowds navigation summary

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -196,31 +196,33 @@ article,
 	.box-bg {
 		position: absolute;
 		z-index: -1;
-		top: var(--layout-gap);
-		left: var(--layout-gap);
-		height: calc(100dvh - calc(var(--layout-gap) * 2));
+		top: calc(calc(var(--layout-gap) + var(--border-size)) * -1);
+		left: calc(calc(var(--layout-gap) + var(--border-size)) * -1);
+		height: calc(100dvh - calc(var(--layout-gap) * 2) - calc(var(--border-size) * 2));
 		width: calc(100dvw - calc(var(--layout-gap) * 2));
 		border: var(--border-size) dashed;
 	}
 
 	#options {
 		grid-area: options;
+		position: relative;
 	}
 
 	#options summary {
-		width: auto;
-	}
-
-	.switch {
-		width: calc(17ch - calc(var(--layout-gap) * 2) - calc(0.25em * 2) + calc(var(--border-size) * 2));
+		width: 10ch;
 	}
 
 	menu {
+		position: absolute;
 		padding: 0px calc(var(--border-size) * 3);
 		max-height: calc(100dvh - calc(var(--layout-gap) * 4) - 2em - calc(var(--border-size) * 4));
 		overflow: auto;
 		flex-flow: column;
 		align-items: start;
+	}
+
+	.switch {
+		width: calc(17ch - calc(var(--layout-gap) * 2) - calc(0.25em * 2) + calc(var(--border-size) * 2));
 	}
 
 	.content {
